@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -81,7 +81,7 @@ final public class LibProvidersLookup {
                 List<String> packageNames = Collections.emptyList();
                 return packageNames;
             }
-        }).flatMap(List::stream).sorted().distinct().collect(Collectors.toList());
+        }).flatMap(List::stream).sorted().distinct().toList();
 
         return neededPackages;
     }
